[package]
name = "recordlog"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
edition = "2018"

[dependencies]
crc32fast = "1.2"
thiserror = "1"
tokio = {version="1", features=["io-util", "fs"]}
async-trait = "0.1"
# regex = "1"
serde = {version= "1", features=["derive"]}
serde_json = {version= "1"}

[dev-dependencies]
tokio = {version="1", features=["io-util", "macros", "rt-multi-thread", "fs"]}
tempfile = "3"
futures = "0.3"
rand = "0.8"
